Make jvm and mvn 2/3 arg diffs consistent.