@@ -46,8 +46,11 @@ case class Build(name: String) {
 
 case class Project(val name:String, val scm:SCM) {
   
+
   var jdks = List("jdk6")
   def jdks(values:String*): this.type = { jdks = List(values: _*); this}
+
+  var jvmOpts = "-Xmx1G -XX:MaxPermSize=256m"
   
   var labels = List("ubuntu","windows")
   def labels(values:String*): this.type = { labels = List(values: _*); this}
